--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
                             3 mois de socle de compétences
                         </p>
                         <ul class="formation">
-                            <li>Frond End: HTML, CSS, Bootstrap, javascript</li>
+                            <li>Front End: HTML, CSS, Bootstrap, javascript</li>
                             <li>Back End: PHP, programmation orientée objet, méthode MVC, SQL, APIs, framework Lumen</li>
-                            <li>Outils: Git, Github, Trello, SCRUM et m"thode AGILE</li>
+                            <li>Outils: Git, Github, Trello, SCRUM et méthode AGILE</li>
                         </ul>
                         <p class="formation">
-                            1 mois de spécilisation Symfony
+                            1 mois de spécialisation Symfony
                         </p>
                         <p class="formation">
                             1 mois de projet professionel en équipe: le projet
