--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             J'ai suivi une formation intensive auprès de l’école O'Clock, qui m'a permis d'acquérir des bases solides en développement web. Je développe par ailleurs mes projets personnels afin d'apprendre, d'évoluer constamment et de nourrir ma curiosité. Ma formation était davantage orientée back-end, avec un focus sur PHP et Symfony. Je m'intéresse cependant aussi aux autres technologies et langages, back comme front, notamment React que j'apprends en autodidacte en m'appuyant sur mes projets.<br>
                             Je suis curieux et j’ai hâte de m’épanouir dans ma nouvelle voie et d’élargir mes connaissances et compétences !
                         </p>
-                        <a href="assets/docs/CV-Cédric Vandermaes.pdf" target="_blank" aria-label="Télécharger mon CV (PDF)">Télécharger mon CV (PDF)</a>
+                        <a href="assets/docs/CV Cédric Vandermaes.pdf" target="_blank" aria-label="Télécharger mon CV (PDF)">Télécharger mon CV (PDF)</a>
                         <br>
                         <br>
                         <a class="btn btn-dark btn-xl" href="#services">Formations</a>
