--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
                 </div>
                 <div class="row gx-0">
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="https://github.com/Leluya/Oflix">
+                        <a class="portfolio-item" href="https://github.com/Leluya/Repertoire-de-films-et-series">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">O'flix</div>
+                                    <div class="h2">Répertoire de films et séries</div>
                                     <p class="mb-0">Site sur critiques de films, réalisé avec Symfony.</p>
                                 </div>
                             </div>
