--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
                         </a>
                     </div>
                     <div class="col-lg-6">
-                        <a class="portfolio-item" href="#">
+                        <a class="portfolio-item" href="https://github.com/Leluya/Weather-forecast">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h2">MakeTonGame</div>
-                                    <p class="mb-0">Site communautaire sur le developpement de jeux vidéo pour tous, réalisé avec Symfony. Projet en cours de construction.</p>
+                                    <div class="h2">Weather-forecast</div>
+                                    <p class="mb-0">Page de prévisions météo du jour et son widget, réalisé avec PHP et Symfony.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/mtg.jpg" alt="MTG" />
+                            <img class="img-fluid" src="assets/img/weather.png" alt="MTG" />
                         </a>
                     </div>
                     <div class="col-lg-6">
