--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                             <li class="list-inline-techno">
                                 <img class="logo" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original-wordmark.svg" />
                             </li>
+                            <li class="list-inline-techno">
+                                <img class="logo2" src="./assets/img/OpenEdge.png" />
+                            </li>
                         </ul>
                     </div>
                     <div class="container px-4 px-lg-5">
@@ -207,6 +210,28 @@
                                 </div>
                             </div>
                             <img class="img-fluid" src="assets/img/otravelback.jpg" alt="otravelback" />
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="https://github.com/Leluya/HTML-CSS">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2">Page front sur les caméléons</div>
+                                    <p class="mb-0">Fausse page d'un site internet sur les caméléons. Utilisation de HTML et CSS. </p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/cameleon.png" alt="cameleon" />
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <a class="portfolio-item" href="https://github.com/Leluya/Space-Invaders">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <div class="h2">Space Invaders</div>
+                                    <p class="mb-0">Jeu Space Invaders fait avec HTML, CSS et JS. </p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/spaceinvaders.png" alt="spaceinvader" />
                         </a>
                     </div>
                 </div>
