update cv + portfolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
                 <h1 id="home" class="mb-1">Cédric Vandermaes</h1>
-                <h3 id="home2" class="mb-5"><em>Développeur Web</em></h3>
+                <h3 id="home2" class="mb-5"><em>Développeur Web Fullstack -Spécialisé en Symfony</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">à propos</a>
             </div>
         </header>
@@ -46,8 +46,8 @@
                     <div class="col-lg-10">
                         <h2>Cédric Vandermaes</h2>
                         <p class="lead mb-5">
-                            Développeur web - Lyon, France -
-                            <a href="mailto:cedric.vandermaes@gmail.com">cedric.vandermaes@gmail.com</a>
+                            Développeur Web Fullstack -Spécialisé en Symfony - Lyon, France -
+                            <a id="mail" href="mailto:cedric.vandermaes@gmail.com">cedric.vandermaes@gmail.com</a>
                             !
                         </p>
                         <p id="summary">
@@ -55,11 +55,14 @@
                             Au fil de mon parcours professionnel, j'ai dû faire preuve à la fois de rigueur, d’adaptabilité et de créativité, pour gérer des projets complexes avec toujours une part d’imprévu. Des qualités que je mets pleinement à profit dans ma progression en tant que développeur !<br>
                             J'ai suivi une formation intensive auprès de l’école O'Clock, qui m'a permis d'acquérir des bases solides en développement web. Je développe par ailleurs mes projets personnels afin d'apprendre, d'évoluer constamment et de nourrir ma curiosité. Ma formation était davantage orientée back-end, avec un focus sur PHP et Symfony. Je m'intéresse cependant aussi aux autres technologies et langages, back comme front, notamment React que j'apprends en autodidacte en m'appuyant sur mes projets.<br>
                             Je suis curieux et j’ai hâte de m’épanouir dans ma nouvelle voie et d’élargir mes connaissances et compétences !
+                            <br>
+                            <br>
+                            Actuellement développeur Progress 4GL chez SISTEMA STRATEGY depuis Septembre 2022.
                         </p>
-                        <a href="assets/docs/CV Cédric Vandermaes.pdf" target="_blank" aria-label="Télécharger mon CV (PDF)">Télécharger mon CV (PDF)</a>
+                        <a id="cv" href="assets/docs/CV Cédric Vandermaes.pdf" target="_blank" aria-label="Télécharger mon CV (PDF)">Télécharger mon CV (PDF)</a>
                         <br>
                         <br>
-                        <a class="btn btn-dark btn-xl" href="#services">Formations</a>
+                        <a id="btnformation" class="btn btn-dark btn-xl" href="#services">Formations</a>
                     </div>
                 </div>
             </div>
@@ -70,6 +73,19 @@
                 <div class="content-section-heading">
                     <h3 class="text-secondary mb-0">Formations</h3>
                     <h2 class="mb-5">Formations</h2>
+                    <div>
+                        <h2 class="school">Formation Progress 4GL</h2>
+                        <p class="formation">
+                            Formation d'un mois et demi avec SISTEMA STRATEGY
+                        </p>
+                        <ul class="formation">
+                            <li>Langage: Progress 4GL, </li>
+                            <li>Outils: AppBuilder, Developper Studio, DataDigger</li>
+                        </ul>
+                        <p class="formation">
+                            1 mois de projet: création de 2 ERP et des bases de données.
+                        </p>
+                    </div>
                     <div >
                         <h2 class="school">Ecole O'Clock</h2>
                         <p class="formation">
