--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container px-4 px-lg-5 text-center">
                 <h1 id="home" class="mb-1">Cédric Vandermaes</h1>
                 <h3 id="home2" class="mb-5"><em>Développeur Web Fullstack -Spécialisé en Symfony</em></h3>
-                <a class="btn btn-primary btn-xl" href="#about">à propos</a>
+                <a id="btnabout" class="btn btn-primary btn-xl" href="#about">à propos</a>
             </div>
         </header>
         <!-- About-->
